apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'maven'
apply plugin: "jacoco"
apply plugin: 'build-dashboard'
apply plugin: 'maven-publish'

group = 'com.github.leyan95'
version = '0.4.29.PRE'
sourceCompatibility = 1.8

compileJava {
    options.encoding = 'UTF-8'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

jar {
    manifest {
        attributes 'Implementation-Title': 'biscuits',
                'Implementation-Version': version
    }

    exclude "org/hv/Application.class"
    exclude "application*.yml"
    exclude "biscuits.sql"
    exclude "./docs"
}

javadoc {
    options.encoding = 'UTF-8'
}

test {
    exclude '*'
}

compileJava.dependsOn(processResources)

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    mavenLocal()
}

def pocketVersion = '0.2.30.PRE'

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web:2.1.1.RELEASE')
    implementation('org.springframework.boot:spring-boot-starter-aop:2.1.1.RELEASE')

    implementation 'com.github.leyan95:pocket:' + pocketVersion
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'mysql:mysql-connector-java:8.0.13'
    implementation 'org.apache.httpcomponents:httpclient:4.5.6'
    testImplementation('org.springframework.boot:spring-boot-starter-test:2.1.1.RELEASE')
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            pom.withXml {
                def root = asNode()
                root.remove(root.get("dependencies"))
                def dependenciesNode = root.appendNode("dependencies")
                def httpClientDependencyNode = dependenciesNode.appendNode('dependency')
                httpClientDependencyNode.appendNode('groupId', 'org.apache.httpcomponents')
                httpClientDependencyNode.appendNode('artifactId', 'httpclient')
                httpClientDependencyNode.appendNode('version', '4.5.6')
                def jwtDependencyNode = dependenciesNode.appendNode('dependency')
                jwtDependencyNode.appendNode('groupId', 'io.jsonwebtoken')
                jwtDependencyNode.appendNode('artifactId', 'jjwt')
                jwtDependencyNode.appendNode('version', '0.9.1')
                def aopDependencyNode = dependenciesNode.appendNode('dependency')
                aopDependencyNode.appendNode('groupId', 'org.springframework.boot')
                aopDependencyNode.appendNode('artifactId', 'spring-boot-starter-aop')
                aopDependencyNode.appendNode('version', '2.1.1.RELEASE')
                def pocketDependencyNode = dependenciesNode.appendNode('dependency')
                pocketDependencyNode.appendNode('groupId', 'com.github.leyan95')
                pocketDependencyNode.appendNode('artifactId', 'pocket')
                pocketDependencyNode.appendNode('version', pocketVersion)
            }
        }
    }
}
